# wpf-ki

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: initialize.sh  post-create.sh  post-start.sh
.github/: contributing.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feat.yml
.github/workflows/: continuous_delivery.yaml  continuous_integration.yml
docs/: README.md  conventions.md
ki-i/: 05 - Weitere Python Module.ipynb  README.md
ki-i/praktikum/: README.md
ki-i/praktikum/notebooks/: 03_objektorientierung_sonstiges.ipynb  03_uebungsaufgaben_objektorientierung_sonstiges.ipynb  04 - Numerische Berechnungen in Numpy.ipynb  04 - Uebungsaufgaben Numerische Berechnungen in Numpy.ipynb  04_numerische_berechnungen_in_numpy.ipynb  04_uebungsaufgaben_numerische_berechnungen_in_numpy.ipynb  05 - Erste Visualisierungen in Matplotlib.ipynb  05 - Uebungsaufgaben Erste Visualisierungen in Matplotlib.ipynb  05_erste_visualisierungen_in_matplotlib.ipynb  05_uebungsaufgaben_erste_visualisierungen_in_matplotlib.ipynb  06 - Erstes Data Wrangling mit Pandas.ipynb  06 - Uebungsaufgaben Erstes Data Wrangling mit Pandas.ipynb  06_erstes_data_wrangling_mit_pandas.ipynb  06_uebungsaufgaben_erstes_data_wrangling_mit_pandas.ipynb  07 - Uebungsaufgaben Data Cleaning und Data Preparation.ipynb  07_data_cleaning_und_data_preparation.ipynb  07_uebungsaufgaben_data_cleaning_und_data_preparation.ipynb  08 - Scikit-learn - Data Preparation.ipynb  08_scikit-learn_data_preparation.ipynb  09 - Scikit-learn - Maschinelles Lernen.ipynb  09_scikit-learn_maschinelles_lernen.ipynb  10 - Scikit-learn - Modellauswahl.ipynb  10_scikit-learn_modellauswahl.ipynb
ki-i/praktikum/notebooks/data/: README.md
ki-i/praktikum/notebooks/images/: README.md
ki-i/praktikum/notebooks/solutions/: 00 - Loesung Jupyter Notebook Grundlagen.ipynb  01 - Loesung Python Grundlagen.ipynb  02 - Loesung Grundlegende Datenstrukturen.ipynb  03 - Loesung Kontrollfluss und Objektorientierung.ipynb  03_uebungsaufgaben_objektorientierung_sonstiges.ipynb  04 - Loesung Numerische Berechnungen in Numpy.ipynb  04_uebungsaufgaben_numerische_berechnungen_in_numpy.ipynb  05 - Loesung Erste Visualisierungen in Matplotlib.ipynb  (+3 more)
ki-i/rechercheauftrag/: README.md
ki-i/rechercheauftrag/notebooks/: 00_jupyter_notebook_grundlagen.ipynb  00_uebungsaufgaben_jupyter_notebook_grundlagen.ipynb  01_python_grundlagen.ipynb  01_uebungsaufgaben_python_grundlagen.ipynb  02_grundlegende_datenstrukturen.ipynb  02_grundlegende_datenstrukturen_kontrollfluss.ipynb  02_uebungsaufgaben_grundlegende_datenstrukturen.ipynb  03_objektorientierung_sonstiges.ipynb  03_uebungsaufgaben_objektorientierung_sonstiges.ipynb
ki-i/testat/testat_1/: 01_testat_zu_den_modulen_numpy_matplotlib_pandas.ipynb  classification_data.csv
ki-i/testat/testat_2/: 02_testat_zu_sklearn.ipynb  california_housing_data.csv
ki-ii/: README.md
ki-ii/praktikum/: 11_TensorFlow_Einführung.ipynb  12_TensorFlow_Grundlagen.ipynb  14_TensorFlow_Weitere_Themen.ipynb  README.md
ki-ii/praktikum/cv/: CNN.ipynb
ki-ii/praktikum/notebooks/: 01_tensorFlow_einfuehrung.ipynb  02_nn_mit_tensorflow.ipynb  02_tensorFlow_grundlagen.ipynb  02_uebungsaufgaben_nn_mit_tensorflow.ipynb  03_regularization__mit_tensorflow.ipynb  04_hyperparameter_optimization_mit_tensorflow.ipynb  05_ensemble_learning_mit_tensorflow.ipynb  13_TensorFlow_Hands_On.ipynb
ki-ii/testat/testat_1/: 01_testat.ipynb  01_testat_nn_regression.ipynb
src/ai_basics/: __init__.py  main.py
tests/: test_example.py
(+24 files in other folders)
